@@ -56,6 +56,7 @@ import org.apache.hadoop.yarn.server.resourcemanager.rmnode.RMNodeStatusEvent;
 import org.apache.hadoop.yarn.server.resourcemanager.scheduler.YarnScheduler;
 import org.apache.hadoop.yarn.server.resourcemanager.scheduler.event.SchedulerEvent;
 import org.apache.hadoop.yarn.server.resourcemanager.scheduler.event.SchedulerEventType;
+import org.apache.hadoop.yarn.server.resourcemanager.timelineservice.RMTimelineCollectorManager;
 import org.junit.After;
 import org.junit.Assert;
 import org.junit.Before;
@@ -90,6 +91,9 @@ public class TestRMAppLogAggregationStatus {
           null, null, null, null, null);
     rmContext.setSystemMetricsPublisher(new SystemMetricsPublisher());
     rmContext.setRMApplicationHistoryWriter(mock(RMApplicationHistoryWriter.class));
+
+    rmContext
+        .setRMTimelineCollectorManager(mock(RMTimelineCollectorManager.class));
 
     scheduler = mock(YarnScheduler.class);
     doAnswer(
